// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Radius should render 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  border-radius: 0.125rem;
  display: block;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;

exports[`Colors should render 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  color: #374151;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  background-color: #0694a2;
  display: block;
}

<div>
  <div
    class="sc-AxjAm c0"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;
